--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Siyi Wang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "A third-year PhD student at Nanyang Technological University, under the supervision of Prof. Anupam Chattopadhyay."
   location         : "Singapore"
-  employer         : "Nanyang Technological University"
+  employer         : "NTU, Singapore"
   uri              : # URL
   email            : "siyi002@e.ntu.edu.sg" 
 
