--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,20 +8,18 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Awards"
+    url: /awards/
+
   - title: "Talks"
     url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+
+  - title: "Service"
+    url: /service/
     
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
