--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Siyi Wang"
   pronouns         : # example: "she/her"  
-  bio              : "A third-year PhD student at Nanyang Technological University, under the supervision of Prof. Anupam Chattopadhyay."
+  bio              : "Ph.D. Candidate at Nanyang Technological University, Singapore"
   location         : "Singapore"
   employer         : "NTU, Singapore"
   uri              : # URL
