--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Siyi_profile.png"
+  avatar           : "Siyi.png"
   name             : "Siyi Wang"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate at Nanyang Technological University, Singapore"
