--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "Siyi-06/Siyi-06.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Siyi.png"
+  avatar           : "Siyi_profile.jpeg"
   name             : "Siyi Wang"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. Candidate at Nanyang Technological University, Singapore"
+  bio              : "Ph.D. at Nanyang Technological University, Singapore"
   location         : "Singapore"
   employer         : "NTU, Singapore"
   uri              : # URL
@@ -34,7 +34,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=xZ6Hd2IAAAAJ"
   impactstory      : # URL
-  orcid            : "https://orcid.org/orcid=0009-0006-9128-1857"
+  orcid            : "https://orcid.org/0009-0006-9128-1857"
   semantic         : # URL
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : "https://www.researchgate.net/profile/Siyi-Wang-42"
