--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,15 +10,18 @@
 main:
   - title: "Publications"
     url: /publications/
-
+  
+  - title: "Awards"
+    url: /awards/   
+    
   - title: "Talks"
     url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Service"
+    url: /service/
         
   - title: "Blog Posts"
     url: /year-archive/
